--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ title: Nova's Blog # the main title
 tagline: Record technical articles # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  Nova's Blog is a platform for sharing technical articles and insights.
+  Develop learning notes
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
