--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,9 @@ github:
 twitter:
   username: twitter_username # change to your Twitter username
 
+juejin:
+  username: nova # change to your Juejin username
+
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
