--- a/_config.yml
+++ b/_config.yml
@@ -28,11 +28,8 @@ url: "https://znovadev.github.io"
 github:
   username: ZNovaDev # change to your GitHub username
 
-twitter:
-  username: twitter_username # change to your Twitter username
-
-juejin:
-  username: nova # change to your Juejin username
+# twitter:
+#   username: twitter_username # change to your Twitter username
 
 social:
   # Change to your full name.
